src/emote/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emote
spec:
  replicas: 2
  selector:
    matchLabels:
      app: emote
  template:
    metadata:
      labels:
        app: emote
    spec:
      containers:
      - name: emote-backend
        image: dawker/bart-large-mnli:1.0.0
        ports:
        - containerPort: 5050
      - name: emote-frontend
        image: dawker/bart-large-mnli-frontend:1.4.0
        ports:
        - containerPort: 80
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: name
                operator: In
                values:
                - stanley
                - phyllis
