src/emote/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emote
spec:
  selector:
    app: emote
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: frontend
    - protocol: TCP
      port: 5050
      targetPort: 5050
      name: backend
  type: ClusterIP
