src/emote/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emote
  annotations:
    external-dns.alpha.kubernetes.io/hostname: emote.shrub.dev
    external-dns.alpha.kubernetes.io/target: 130.61.64.164
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: "emote.shrub.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emote
                port:
                  number: 80
  tls:
    - hosts:
        - "emote.shrub.dev"
      secretName: emote-tls
